--- a/style.css
+++ b/style.css
@@ -71,8 +71,6 @@ html {
 
 .container {
   width: 100%;
-  padding-right: 10px;
-  padding-left: 10px;
   margin-right: auto;
   margin-left: auto; }
 
@@ -86,11 +84,11 @@ html {
 
 @media (min-width: 992px) {
   .container {
-    max-width: 960px; } }
+    max-width: 940px; } }
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px; } }
+    max-width: 940px; } }
 
 .container-fluid {
   width: 100%;
@@ -1506,7 +1504,8 @@ html {
     align-self: stretch !important; } }
 
 body {
-  background-color: #27253f; }
+  background-color: #27253f;
+  font-family: "Open Sans", sans-serif; }
 
 a {
   color: #fff; }
@@ -1531,28 +1530,34 @@ a.btn {
 header {
   color: #fff;
   padding: 53px 0;
-  margin-bottom: 78px; }
-  header nav ul {
-    display: flex;
-    justify-content: space-between; }
-    header nav ul li a {
-      font-family: "Open Sans", sans-serif;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: 4.4px;
-      font-size: 18px;
-      transition: 0.3s; }
-      header nav ul li a:hover {
-        opacity: .5; }
+  margin-bottom: 80px; }
+  header nav {
+    max-width: 1050px;
+    margin: 0 auto; }
+    header nav ul {
+      display: flex;
+      justify-content: space-between; }
+      header nav ul li a {
+        font-family: "Open Sans", sans-serif;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 4.4px;
+        font-size: 18px;
+        transition: 0.3s; }
+        header nav ul li a:hover {
+          opacity: .5; }
 
 #home .top-home {
   display: flex;
-  justify-content: space-around; }
+  align-items: center;
+  max-width: 780px;
+  margin: 0 auto; }
   #home .top-home .presentation {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    max-width: 380px; }
+    flex: 5;
+    margin-right: 100px; }
     #home .top-home .presentation h1 {
       font-family: "Fjalla One", sans-serif;
       font-size: 70px;
@@ -1590,29 +1595,94 @@ header {
         background-size: cover;
         display: block; }
   #home .top-home .info-cards {
-    padding: 0 34px;
     background-color: #f6f2fe;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
-    max-width: 300px; }
-    #home .top-home .info-cards .text-card .header {
+    flex: 4; }
+    #home .top-home .info-cards .label {
+      display: block;
+      font-size: 12px;
+      margin-top: 10px;
+      text-transform: uppercase; }
+    #home .top-home .info-cards .number {
+      font-family: "Fjalla One", sans-serif;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 28px; }
+    #home .top-home .info-cards .text-card {
+      padding: 0 35px 20px; }
+      #home .top-home .info-cards .text-card .header {
+        display: flex;
+        justify-content: space-between;
+        padding: 40px 0; }
+        #home .top-home .info-cards .text-card .header .arrow:before {
+          content: '';
+          background-image: url("img/arrow.png");
+          width: 23px;
+          height: 19px;
+          display: block;
+          background-size: cover; }
+        #home .top-home .info-cards .text-card .header span {
+          color: #27253f;
+          font-family: "Fjalla One", sans-serif;
+          font-size: 30px;
+          font-weight: 400;
+          line-height: 28px; }
+      #home .top-home .info-cards .text-card .content p {
+        color: #212b36;
+        font-family: "Open Sans", sans-serif;
+        font-size: 14px; }
+    #home .top-home .info-cards .performance-card {
+      background-color: #fff;
       display: flex;
+      padding: 20px 15px;
+      align-items: center;
       justify-content: space-between;
-      padding: 40px 0; }
-      #home .top-home .info-cards .text-card .header .arrow:before {
-        content: '';
-        background-image: url("img/arrow.png");
-        width: 23px;
-        height: 19px;
-        display: block;
-        background-size: cover; }
-      #home .top-home .info-cards .text-card .header span {
-        color: #27253f;
-        font-family: "Fjalla One", sans-serif;
-        font-size: 30px;
-        font-weight: 400;
-        line-height: 28px; }
-    #home .top-home .info-cards .text-card p {
-      color: #212b36;
+      border-top: 1px solid #ddd; }
+      #home .top-home .info-cards .performance-card .graph {
+        max-width: 170px; }
+
+#home .bottom-home {
+  border-radius: 3px;
+  background-color: #fff;
+  box-shadow: 0 2px 11px rgba(0, 0, 0, 0.55);
+  position: relative; }
+  #home .bottom-home .summary .top-summary {
+    padding: 45px 30px;
+    border-bottom: 1px solid #ddd; }
+    #home .bottom-home .summary .top-summary ul {
+      display: flex;
+      justify-content: space-between; }
+      #home .bottom-home .summary .top-summary ul li {
+        color: #575757;
+        font-family: "Open Sans", sans-serif;
+        font-size: 18px;
+        font-weight: 300;
+        display: flex;
+        align-items: center;
+        padding: 0 30px;
+        flex: 1; }
+        #home .bottom-home .summary .top-summary ul li:nth-child(2) {
+          border-right: 1px solid #ddd;
+          border-left: 1px solid #ddd; }
+        #home .bottom-home .summary .top-summary ul li .icon {
+          padding-right: 15px; }
+          #home .bottom-home .summary .top-summary ul li .icon:before {
+            content: '';
+            width: 50px;
+            height: 50px;
+            display: block;
+            background-size: cover; }
+          #home .bottom-home .summary .top-summary ul li .icon.github:before {
+            background-image: url("img/summary-github.png"); }
+          #home .bottom-home .summary .top-summary ul li .icon.cpu:before {
+            background-image: url("img/summary-cpu.png"); }
+          #home .bottom-home .summary .top-summary ul li .icon.money:before {
+            background-image: url("img/summary-dollar.png"); }
+  #home .bottom-home .summary .bottom-summary {
+    padding: 50px 50px 10px; }
+    #home .bottom-home .summary .bottom-summary p {
+      color: #575757;
       font-family: "Open Sans", sans-serif;
-      font-size: 14px; }
+      font-size: 18px;
+      font-weight: 300; }
