--- a/style/style.scss
+++ b/style/style.scss
@@ -7,3 +7,9 @@
 @import './layouts/_global.scss';
 @import './layouts/_header';
 @import './layouts/_home.scss';
+@import './layouts/_snippets.scss';
+@import './layouts/_features.scss';
+@import './layouts/_stats.scss';
+@import './layouts/_integration.scss';
+@import './layouts/_customers.scss';
+@import './layouts/_contact.scss';
