--- a/style.css
+++ b/style.css
@@ -1527,10 +1527,51 @@ a.btn {
   a.btn:hover {
     opacity: .7; }
 
+section {
+  padding: 50px 0;
+  display: inline-block;
+  width: 100%; }
+  section h2 {
+    font-family: "Fjalla One", sans-serif;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 64px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #fff; }
+  section .subhead {
+    font-family: "Open Sans", sans-serif;
+    font-size: 25px;
+    font-weight: 300;
+    text-align: center;
+    color: #fff; }
+
+.snippets-box {
+  border-radius: 3px;
+  border: 1px solid #6146d7;
+  background-color: #2d2a48;
+  padding: 35px 20px 35px 35px;
+  display: flex;
+  margin-bottom: 30px;
+  transition: 0.3s; }
+  .snippets-box:hover {
+    transform: scale(1.05);
+    cursor: default; }
+  .snippets-box p {
+    color: #c0b2fc;
+    font-family: "Open Sans", sans-serif;
+    font-size: 24px; }
+  .snippets-box span {
+    color: #fbfbfb;
+    font-family: "Fjalla One", sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    padding-left: 10px; }
+
 header {
   color: #fff;
-  padding: 53px 0;
-  margin-bottom: 80px; }
+  padding: 53px 0; }
   header nav {
     max-width: 1050px;
     margin: 0 auto; }
@@ -1571,7 +1612,8 @@ header {
       font-family: "Open Sans", sans-serif;
       font-size: 24px;
       font-weight: 300;
-      margin-bottom: 50px; }
+      margin-bottom: 50px;
+      text-align: left; }
     #home .top-home .presentation .btn {
       display: flex;
       width: 263px;
@@ -1647,6 +1689,10 @@ header {
   background-color: #fff;
   box-shadow: 0 2px 11px rgba(0, 0, 0, 0.55);
   position: relative; }
+  #home .bottom-home:before {
+    content: '';
+    position: absolute;
+    background-image: url("img/lines.svg"); }
   #home .bottom-home .summary .top-summary {
     padding: 45px 30px;
     border-bottom: 1px solid #ddd; }
@@ -1680,9 +1726,163 @@ header {
           #home .bottom-home .summary .top-summary ul li .icon.money:before {
             background-image: url("img/summary-dollar.png"); }
   #home .bottom-home .summary .bottom-summary {
-    padding: 50px 50px 10px; }
-    #home .bottom-home .summary .bottom-summary p {
-      color: #575757;
+    padding: 50px 50px 10px;
+    display: flex; }
+    #home .bottom-home .summary .bottom-summary .summary-text {
+      flex: 3; }
+      #home .bottom-home .summary .bottom-summary .summary-text p {
+        color: #575757;
+        font-family: "Open Sans", sans-serif;
+        font-size: 18px;
+        font-weight: 300; }
+    #home .bottom-home .summary .bottom-summary .summary-title {
+      flex: 2; }
+      #home .bottom-home .summary .bottom-summary .summary-title h2 {
+        color: #27253f;
+        font-family: "Fjalla One", sans-serif;
+        font-size: 55px;
+        font-weight: 400;
+        text-transform: uppercase;
+        text-align: right; }
+
+#snippets {
+  margin-top: 100px; }
+  #snippets .snippets-wrapper {
+    display: flex; }
+    #snippets .snippets-wrapper .snippets-boxes {
+      flex: 3.2;
+      margin-right: 35px; }
+    #snippets .snippets-wrapper .snippets-card {
+      border-radius: 3px;
+      background-color: #6146d7;
+      padding: 60px 20px 80px 40px;
+      flex: 2.8;
+      align-self: flex-start;
+      margin-top: 165px;
+      position: relative; }
+      #snippets .snippets-wrapper .snippets-card:after {
+        content: '';
+        width: 74px;
+        height: 206px;
+        background-color: #fff;
+        position: absolute;
+        top: -180px;
+        right: 42px;
+        background: url("img/info.png"); }
+      #snippets .snippets-wrapper .snippets-card:before {
+        content: '';
+        width: 241px;
+        height: 241px;
+        background-image: url("img/Oval_3.png");
+        position: absolute;
+        top: -271px;
+        right: -30px; }
+      #snippets .snippets-wrapper .snippets-card h2 {
+        color: #fff;
+        font-family: "Fjalla One", sans-serif;
+        font-size: 55px;
+        font-weight: 400;
+        line-height: 64px;
+        text-transform: uppercase;
+        margin-bottom: 80px; }
+      #snippets .snippets-wrapper .snippets-card p {
+        color: #fff;
+        font-family: "Open Sans", sans-serif;
+        font-size: 24px;
+        font-weight: 300;
+        line-height: 33px; }
+
+#stats .snippets-box {
+  max-width: 860px;
+  justify-content: space-between;
+  padding: 10px 35px;
+  margin: 35px auto;
+  flex-wrap: wrap;
+  align-items: center; }
+  #stats .snippets-box span {
+    font-size: 34px; }
+
+#integration .trusted-by {
+  max-width: 1050px;
+  margin: 80px auto 0 auto; }
+  #integration .trusted-by img {
+    width: 120px;
+    max-height: 50px; }
+
+#customers {
+  background: #f6f2fe;
+  padding: 75px 0;
+  font-size: 0; }
+  #customers h2 {
+    color: #27253f;
+    font-family: "Open Sans", sans-serif;
+    font-size: 30px;
+    font-weight: 300;
+    text-transform: initial; }
+  #customers .owl-carousel figcaption, #customers .owl-carousel img {
+    display: inline-block;
+    width: 50%;
+    vertical-align: middle; }
+  #customers .owl-carousel figcaption {
+    background-color: #fff;
+    color: #757676;
+    font-family: "Open Sans", sans-serif;
+    font-size: 15px;
+    line-height: 22px;
+    padding: 80px 50px;
+    text-align: left; }
+    #customers .owl-carousel figcaption h3 {
+      margin-bottom: 10px;
+      color: #27253f;
+      font-size: 16px;
       font-family: "Open Sans", sans-serif;
-      font-size: 18px;
+      font-weight: 700; }
+  #customers .owl-carousel .owl-nav {
+    position: absolute;
+    left: -35px;
+    top: 50%;
+    transform: translateY(-50%); }
+    #customers .owl-carousel .owl-nav button {
+      display: block;
+      width: 60px;
+      height: 60px;
+      background-color: #e8e2f3;
+      color: #6146d7;
+      font-size: 30px;
+      border: 1px solid #fff; }
+
+#contact {
+  padding: 200px 0;
+  background: url("img/contact-bg.png"); }
+  #contact form {
+    display: flex;
+    justify-content: center; }
+    #contact form input {
+      padding: 20px 30px;
+      color: #27253f;
+      font-size: 25px;
+      border-top-left-radius: 3px;
+      border-bottom-left-radius: 3px; }
+    #contact form ::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
+      color: #c4bebe;
+      font-family: "Open Sans", sans-serif;
+      font-size: 25px;
       font-weight: 300; }
+    #contact form button {
+      background-color: #6146d7;
+      color: #fff;
+      border: 0;
+      padding: 0 25px;
+      font-size: 25px;
+      font-weight: 300;
+      font-family: "Open Sans", sans-serif;
+      border-top-right-radius: 3px;
+      border-bottom-right-radius: 3px;
+      transition: 0.3s; }
+      #contact form button:hover {
+        opacity: .7s;
+        cursor: pointer; }
+  #contact .subhead {
+    margin: 30px auto 50px;
+    max-width: 520px; }
