--- a/style/layouts/_home.scss
+++ b/style/layouts/_home.scss
@@ -4,12 +4,14 @@
         align-items: center;
         max-width: 780px;
         margin: 0 auto;
+
         .presentation {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             flex: 5;
             margin-right: 100px;
+
             h1 {
                 font-family: $font-fjalla;
                 font-size: 70px;
@@ -26,6 +28,7 @@
                 font-size: 24px;
                 font-weight: 300;
                 margin-bottom: 50px;
+                text-align: left;
             }
 
             .btn {
@@ -33,8 +36,10 @@
                 width: 263px;
                 justify-content: space-between;
                 align-items: center;
+
                 span {
                     display: block;
+
                     &.download-from {
                         font-size: 12px;
                         text-transform: uppercase;
@@ -66,6 +71,7 @@
             border-top-left-radius: 3px;
             border-top-right-radius: 3px;
             flex: 4;
+
             .label {
                 display: block;
                 font-size: 12px;
@@ -82,10 +88,12 @@
 
             .text-card {
                 padding: 0 35px 20px;
+
                 .header {
                     display: flex;
                     justify-content: space-between;
                     padding: 40px 0;
+
                     .arrow {
                         &:before {
                             content: '';
@@ -124,6 +132,7 @@
                 align-items: center;
                 justify-content: space-between;
                 border-top: 1px solid #ddd;
+                
                 .graph {
                     max-width: 170px;
                 }
@@ -136,13 +145,18 @@
         background-color: #fff;
         box-shadow: 0 2px 11px rgba(0, 0, 0, 0.55);
         position: relative;
+
+        &:before{
+            content: '';
+            position: absolute;
+            background-image: url('img/lines.svg');
+        }
         .summary {
             .top-summary {
                 padding: 45px 30px;
                 border-bottom: 1px solid #ddd;
 
                 ul {
-
                     display: flex;
                     justify-content: space-between;
 
@@ -196,11 +210,30 @@
 
             .bottom-summary { 
                 padding: 50px 50px 10px;
-                p {
-                    color: #575757;
-                    font-family: $font-open;
-                    font-size: 18px;
-                    font-weight: 300;
+                display: flex;
+
+                .summary-text{
+                    flex: 3;
+
+                    p {
+                        color: #575757;
+                        font-family: $font-open;
+                        font-size: 18px;
+                        font-weight: 300;
+                    }
+                }
+
+                .summary-title{
+                    flex: 2;
+
+                    h2{
+                        color: $purple-10;
+                        font-family: $font-fjalla;
+                        font-size: 55px;
+                        font-weight: 400;
+                        text-transform: uppercase;
+                        text-align: right;
+                    }
                 }
             }
         }
