--- a/style/layouts/_contact.scss
+++ b/style/layouts/_contact.scss
@@ -1,6 +1,7 @@
 #contact{
     padding: 200px 0;
     background: url('img/contact-bg.png');
+    border-top: 10px solid #7d5bbe;
 
     form{
         display: flex;
