--- a/style/layouts/_global.scss
+++ b/style/layouts/_global.scss
@@ -3,6 +3,10 @@ body{
     font-family: $font-open;
 }
 
+main{
+    padding-top: 80px;
+}
+
 a{
     color: #fff;
 }
@@ -32,7 +36,7 @@ a{
 }
 
 section{
-    padding: 50px 0;
+    padding: 80px 0 50px;
     display: inline-block;
     width: 100%;
 
