--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -1,6 +1,20 @@
 header{
     color: #fff;
     padding: 53px 0;
+    transition: $transition;
+    position: fixed;
+    width: 100%;
+    &.fixed{
+        background: $purple-7;
+        padding: 20px 0;
+        z-index: 2;
+        box-shadow: 0 4px 2px -2px $purple-12;
+        li{
+            a{
+                font-size: 14px;
+            }
+        }
+    }
     nav{
         max-width: 1050px;
         margin: 0 auto;
